[package]
name = "tcpprepend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
tokio = { version = "1.21.2", features = ["rt", "net", "macros", "time", "io-util"] }
xflags = "0.3.1"
